# CS50P-problem-sets

./: README.md  pyproject.toml  requirements.txt
problem_set_0/: README.md  einstein.py  faces.py  indoor.py  playback.py  tip.py
problem_set_1/: README1.md  bank.py  deep.py  extension.py  extension2.py  interpreter.py  meal.py
problem_set_2/: README.md  camel.py  coke.py  nutrition.py  plates.py  twttr.py
problem_set_3/: README.md  fuel.py  grocery.py  outdated.py  taqueria.py
problem_set_4/: README.md  adieu.py  bitcoin.py  emojize.py  figlet.py  game.py  professor.py
problem_set_5/: README5.md  test_bank.py  test_fuel.py  test_plates.py  test_twttr.py
problem_set_6/: README.md  lines.py  pizza.py  scourgify.py  shirt.py
problem_set_7/: README.md  numb3rs.py  response.py  test_numb3rs.py  test_um.py  test_working.py  um.py  watch.py  working.py
problem_set_8/: README.md  README8.md  jar.py  seasons.py  shirtificate.py  test_jar.py  test_seasons.py
